# transformationInvariantImageSearch

./: .travis.yml  LICENSE  MANIFEST.in  README.md  setup.py
docs/: index.html  jspolygon.js  main.js  math.js  style.css
docs/images/: affineDemo.webm  morty.webm
fullEndToEndDemo/: CMakeLists.txt  README.md  commandsToRun.sh  runDemo  runDemo1.sh  runDemo2.sh  setup.sh
fullEndToEndDemo/src/: FragmentHash.h  Keypoint.h  PerceptualHash.h  PerceptualHash_Fast.h  ShapeAndPositionInvariantImage.h  Triangle.h  curvature.py  dumpKeypointsToJson.py  main.cc  mainImageProcessingFunctions.hpp  utils.hpp
fullEndToEndDemo/src/img_hash_opencv_module/: PHash_Fast.cpp  PHash_Fast.h  img_hash.hpp  img_hash_base.hpp  phash.cpp  phash.hpp  precomp.hpp  precomp.hpp~
python/: keypoints.py  main.py  phash.py  requirements.txt
tests/: test_main.py  test_models.py
transformation_invariant_image_search/: README.md  curvature.py  keypoints.py  main.py  models.py  phash.py  requirements.txt
transformation_invariant_image_search/templates/tiis/: index.html
